# c-plus-plus

Word count/SemestralniProject/: CMakeLists.txt  input.txt  main.cpp  output.txt
Word count/SemestralniProject/files/: input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
